templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  # namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        volumeMounts:
        - name: {VOLUME_NAME}
          mountPath: /usr/share/nginx/html
      #  1. option ENV
      volumes:
      - name: {VOLUME_NAME}
        emptyDir: {}
          sizeLimit: 100Mi
