templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  # namespace: application
spec:
  containers:
  - name: nginx
    image: nginx:1.23.3
    ports:
    - containerPort: 80
