templates/statefull_wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  clusterIP: None
  selector:
    app: wordpress
  ports:
    - port: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      name: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.1
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi

Ak chceš použiť manuálne PVC, môžeš namiesto volumeClaimTemplates priamo použiť volumes a referenciu na PVC:

volumes:
- name: mysql-storage
  persistentVolumeClaim:
    claimName: pvc-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
spec:
  serviceName: "wordpress"
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html
  volumeClaimTemplates:
  - metadata:
      name: wordpress-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
Opäť, ak chceš použiť manuálne PVC, môžeš nahradiť volumeClaimTemplates blok volím referenciou na existujúci PVC:

volumes:
- name: wordpress-storage
  persistentVolumeClaim:
    claimName: pvc-wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-external
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # port na každom node
