templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller # ingress name
  # namespace: application
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: weather # service name
            port:
              number: 8000 # host port name
        path: / # path
        pathType: Prefix # Prefix / Exact
